# GeometricShapes2D_client

./: .gitignore  CMakeLists.txt  Cercle.cpp  Cercle.h  CercleParserCOR.cpp  CercleParserCOR.h  Forme.cpp  Forme.h  Groupe.cpp  Groupe.h  GroupeParserCOR.cpp  GroupeParserCOR.h  Homothetie.cpp  Homothetie.h  InputStreamProvider.cpp  InputStreamProvider.h  Polygone.cpp  Polygone.h  PolygoneParserCOR.cpp  PolygoneParserCOR.h  README.md  Rotation.cpp  Rotation.h  Segment.cpp  Segment.h  SegmentParserCOR.cpp  SegmentParserCOR.h  ShapeFactory.h  TCPClient.h  TestGeometricShapes.cpp  Transformation.h  Translation.cpp  Translation.h  Triangle.cpp  Triangle.h  TriangleParserCOR.cpp  TriangleParserCOR.h  Vecteur2D.h  VisiteurEnregistrer.h  Visteur.h  (+7 more)
lecture/: forme.txt
sauvegarde/: cercles.txt  groupes.txt  polygones.txt  segments.txt  triangles.txt
